[gd_scene load_steps=7 format=3 uid="uid://203w0hfj8nm2"]

[ext_resource type="Script" path="res://addons/eranot.resizable/resizable.gd" id="1_56s52"]
[ext_resource type="Script" path="res://scenes/yarn-box.gd" id="1_sxn1s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lq1m"]
bg_color = Color(0.259294, 0.259294, 0.259294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3iuru"]
bg_color = Color(0.180005, 0.180005, 0.180005, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_okqtn"]
bg_color = Color(0.262932, 0.262932, 0.262932, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jsofe"]
bg_color = Color(0.118581, 0.118581, 0.118581, 1)

[node name="YarnBox" type="Button"]
z_index = 1
offset_right = 228.0
offset_bottom = 123.0
theme_override_styles/focus = SubResource("StyleBoxFlat_5lq1m")
theme_override_styles/hover = SubResource("StyleBoxFlat_3iuru")
theme_override_styles/pressed = SubResource("StyleBoxFlat_okqtn")
theme_override_styles/normal = SubResource("StyleBoxFlat_jsofe")
script = ExtResource("1_sxn1s")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "TITLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_font_sizes/bold_italics_font_size = 9
theme_override_font_sizes/italics_font_size = 9
theme_override_font_sizes/mono_font_size = 9
theme_override_font_sizes/normal_font_size = 9
theme_override_font_sizes/bold_font_size = 9
bbcode_enabled = true
text = "text to edit
inside a box"

[node name="BottomPanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/BottomPanel/MarginContainer"]
layout_mode = 2

[node name="BadConnections" type="ColorRect" parent="VBoxContainer/BottomPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(14, 14)
layout_mode = 2
color = Color(0.674871, 0.120933, 0.135097, 1)

[node name="Debug" type="Label" parent="VBoxContainer/BottomPanel/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 9

[node name="Resizable" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_56s52")

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="resized" from="." to="." method="_on_resized"]
